# cmakehello

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: issue-template.md
cmakehello/: entry.c
